--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -25,6 +25,19 @@
             <input type="file" id="image" class="form-control" name="listing[image]" placeholder="Enter image Url" required>
           </div>
 
+          <div class="mb-3">
+            <label for="category" class="form-label">Select category: </label>
+            <select class="form-select" required id="category" name="listing[category]">
+              <option value="">Open this select menu</option>
+              <option value="iconicCities">Iconic Cities</option>
+              <option value="mountains">Mountains</option>
+              <option value="amazingPools">Amazing Pools</option>
+              <option value="camping">Camping</option>
+              <option value="arctic">Arctic</option>
+              <option value="farms">Farms</option>
+            </select>
+          </div>
+
           <div class="row mb-3">
             <div class="col-md-4">
               <label for="price" class="form-label">Price: </label>
