add search feature

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -125,7 +125,7 @@
   <div id="tax-toggel">
     <div class="form-check-reverse form-switch">
       <input class="form-check-input" type="checkbox" role="switch" id="switchCheckChecked">
-      <label class="form-check-label" for="switchCheckChecked">Display total after taxs</label>
+      <label class="form-check-label" for="switchCheckChecked">Display total after taxes</label>
     </div>
   </div>
 </div>
@@ -139,7 +139,7 @@
               <img src="<%= listing.image.url %>" class="card-img-top" alt="..." style="height: 20rem;">
               <div class="card-img-overlay"><%= listing.description %></div>
               <div class="card-body">
-                <p class="card-text"><b><%= listing.title %></b> <br> &#8377; <%= listing.price.toLocaleString("en-IN") %> / night <i class="tax-info"> &nbsp; &nbsp;+18% taxs</i></p>
+                <p class="card-text"><b><%= listing.title %></b> <br> &#8377; <%= listing.price.toLocaleString("en-IN") %> / night <i class="tax-info"> &nbsp; &nbsp;+18% taxes</i></p>
               </div>
             </div>
           </a>
