--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -32,8 +32,8 @@
         <a class="nav-link" href="/listings">Explore</a>
       </div>
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
-          <input class="form-control me-2 int-search" type="search" placeholder="Search" aria-label="Search"/>
+        <form class="d-flex" role="search" action="/listings/search" method="get">
+          <input class="form-control me-2 int-search" type="search" placeholder="Search" aria-label="Search" name="search"/>
           <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
         </form>
       </div>
